add mlflow artifact deployment
